--- a/Atividade1/app/src/main/res/layout/activity_pag_inicial.xml
+++ b/Atividade1/app/src/main/res/layout/activity_pag_inicial.xml
@@ -6,89 +6,96 @@
     android:layout_height="match_parent"
     android:background="@drawable/backgroun"
     tools:context=".PagInicial">
-    
-    <View
-        android:id="@+id/container_user"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/container_user"
+
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/logo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
-    
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_person"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="@id/container_user"
-        app:layout_constraintEnd_toEndOf="@id/container_user"
-        app:layout_constraintTop_toTopOf="@id/container_user"
-        app:layout_constraintTop_toBottomOf="@id/container_user"/>
 
     <ImageView
         android:id="@+id/icone_user"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/ic_person"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/container_user"
+        app:layout_constraintTop_toBottomOf="@id/logo"
         app:layout_constraintStart_toStartOf="parent"/>
-    
+
+    <!-- Correção aqui: mudar de EditText para TextView -->
     <TextView
         android:id="@+id/text_Nome_Usuario"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Aluno"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_marginTop="40dp"
-        android:layout_marginLeft="25dp"
-        app:layout_constraintTop_toBottomOf="@id/container_user"
+        android:layout_marginStart="25dp"
+        app:layout_constraintTop_toBottomOf="@id/logo"
         app:layout_constraintStart_toEndOf="@id/icone_user"/>
+
     <ImageView
-        android:id="@+id/icone_email"
+        android:id="@+id/icone_Email"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/ic_email"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/icone_user"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:id="@+id/text_Email_Usuario"
-        android:layout_width="wrap_content"
+        android:id="@+id/text_Post_Usuario"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="aluno@ulife.com.br"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_marginTop="40dp"
-        android:layout_marginLeft="25dp"
+        android:layout_marginStart="25dp"
         app:layout_constraintTop_toBottomOf="@id/text_Nome_Usuario"
-        app:layout_constraintStart_toEndOf="@id/icone_email"/>
+        app:layout_constraintStart_toEndOf="@id/icone_Comentario"/>
 
-    <Button
+    <ImageView
+        android:id="@+id/icone_Comentario"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/icone_comentario"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/icone_Email"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/text_Comentarios"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="25dp"
+        app:layout_constraintTop_toBottomOf="@id/text_Post_Usuario"
+        app:layout_constraintStart_toEndOf="@id/icone_Comentario"/>
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_deslogar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Logout"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
         android:textAllCaps="false"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="@color/white"
         android:padding="20dp"
         android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@id/text_Email_Usuario"/>
-
-
-
-
-
+        app:layout_constraintTop_toBottomOf="@id/text_Comentarios"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
