--- a/Atividade1/app/src/main/res/layout/activity_pag_inicial.xml
+++ b/Atividade1/app/src/main/res/layout/activity_pag_inicial.xml
@@ -16,6 +16,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+    <ImageView
+        android:id="@+id/ic_Email"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_email"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/logo"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/text_Email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="25dp"
+        app:layout_constraintTop_toBottomOf="@id/logo"
+        app:layout_constraintStart_toEndOf="@id/ic_Email"/>
 
     <ImageView
         android:id="@+id/icone_user"
@@ -24,7 +45,7 @@
         android:src="@drawable/ic_person"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/logo"
+        app:layout_constraintTop_toBottomOf="@id/ic_Email"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <!-- Correção aqui: mudar de EditText para TextView -->
@@ -37,14 +58,14 @@
         android:textStyle="bold"
         android:layout_marginTop="40dp"
         android:layout_marginStart="25dp"
-        app:layout_constraintTop_toBottomOf="@id/logo"
+        app:layout_constraintTop_toBottomOf="@id/text_Email"
         app:layout_constraintStart_toEndOf="@id/icone_user"/>
 
     <ImageView
-        android:id="@+id/icone_Email"
+        android:id="@+id/icone_post"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/ic_email"
+        android:src="@drawable/ic_post"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/icone_user"
@@ -69,7 +90,7 @@
         android:src="@drawable/icone_comentario"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/icone_Email"
+        app:layout_constraintTop_toBottomOf="@id/icone_post"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
